<resources>
    <string name="app_name">VeciApp</string>
    <string name="tv_titulo">Datos Personales</string>
    <string name="pt_nombre">Ingrese su Nombre</string>
    <string name="pt_apellido">Ingrese su Apellido</string>
    <string name="pt_correo">Ingrese su Correo</string>
    <string name="pt_usuario">Ingrese su Usuario</string>
    <string name="pw_clave">Ingrese la Clave</string>
    <string name="pw_repclave">Repita la Clave</string>
    <string name="btn_siguiente">Guardar</string>
    <string name="tv_titulo2">Datos del Negocio</string>
    <string name="tv_nomUsuario">Nombre del Usuario</string>
    <string name="pt_nombrenegocio">Nombre de su Negocio</string>
    <string name="btn_regresar">Regresar</string>
    <string name="btn_registrar">Registrar</string>
    <string name="btn_inisesion">Iniciar Sesion</string>
    <string name="ib_loading">Loading</string>
    <string name="todo">TODO</string>
    <string name="tv_registrar">Registro</string>
    <string name="rb_unormal">Usuario Estandar</string>
    <string name="rb_unegocio">Usuario con negocio</string>
    <string name="tv_encabezado">Inicio de Sesion</string>
    <string name="tv_p_encabezado1">Galeria</string>
    <string name="tv_p_encabezado2">Calificacion</string>
    <string name="tv_p_encabezado3">Comentarios</string>
</resources>
