<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoglobal"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_titulo"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="24dp"
                android:hint="@string/tv_titulo"
                android:text="@string/tv_titulo"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/titulos"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/pt_nombre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.976" />

            <EditText
                android:id="@+id/pt_apellido"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginBottom="24dp"
                android:autofillHints=""
                android:background="@color/fondocajas"
                android:ems="10"
                android:hint="@string/pt_apellido"
                android:inputType="textPersonName"
                android:textColor="@color/textonormal"
                app:layout_constraintBottom_toTopOf="@+id/pt_correo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/pt_correo"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginBottom="24dp"
                android:autofillHints=""
                android:background="@color/fondocajas"
                android:ems="10"
                android:hint="@string/pt_correo"
                android:inputType="textPersonName"
                android:textColor="@color/textonormal"
                app:layout_constraintBottom_toTopOf="@+id/pw_clave"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/pt_nombre"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginBottom="24dp"
                android:autofillHints=""
                android:background="@color/fondocajas"
                android:ems="10"
                android:hint="@string/pt_nombre"
                android:inputType="textPersonName"
                android:textColor="@color/textonormal"
                app:layout_constraintBottom_toTopOf="@+id/pt_apellido"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/pw_clave"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginBottom="24dp"
                android:autofillHints=""
                android:background="@color/fondocajas"
                android:ems="10"
                android:hint="@string/pw_clave"
                android:inputType="textPassword"
                android:textColor="@color/textonormal"
                app:layout_constraintBottom_toTopOf="@+id/pw_repclave"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/pw_repclave"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginBottom="28dp"
                android:autofillHints=""
                android:background="@color/fondocajas"
                android:ems="10"
                android:hint="@string/pw_repclave"
                android:inputType="textPassword"
                android:textColor="@color/textonormal"
                app:layout_constraintBottom_toTopOf="@+id/btn_siguiente"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/tv_titulo2"
                android:text="@string/tv_titulo2"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/titulos"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tv_titulo2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.763" />

            <Spinner
                android:id="@+id/sp_negocio"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:background="@color/fondocajas"
                app:layout_constraintBottom_toTopOf="@+id/pt_nombrenegocio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/pt_nombrenegocio"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="20dp"
                android:autofillHints=""
                android:background="@color/fondocajas"
                android:ems="10"
                android:hint="@string/pt_nombrenegocio"
                android:inputType="textPersonName"
                android:textColor="@color/textonormal"
                app:layout_constraintBottom_toTopOf="@+id/mapView1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView1"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="92dp"
                android:background="@color/fondocajas"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.485"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_siguiente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="36dp"
                android:background="@color/fondocajas"
                android:hint="@string/btn_siguiente"
                android:onClick="siguiente"
                android:text="@string/btn_siguiente"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/textonormal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.796"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>