<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoglobal"
    tools:context=".InformacionNegocio">

    <EditText
        android:id="@+id/pt_nomnegocio"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="@color/fondocajas"
        android:ems="10"
        android:hint="@string/pt_nombrenegocio"
        android:inputType="textPersonName"
        android:textColor="@color/textonormal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/pt_infonegdireccion"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:background="@color/fondocajas"
        android:ems="10"
        android:hint="Informacion del Negocio - Direccion"
        android:inputType="textPersonName"
        android:textColor="@color/textonormal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pt_nomnegocio" />

    <EditText
        android:id="@+id/pt_infonegtelefonos"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:background="@color/fondocajas"
        android:ems="10"
        android:hint="Informacion del Negocio - telefono"
        android:inputType="textPersonName"
        android:textColor="@color/textonormal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pt_infonegdireccion" />

    <EditText
        android:id="@+id/pt_infonegcorreo"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:background="@color/fondocajas"
        android:ems="10"
        android:hint="Informacion del Negocio - correo electronico"
        android:inputType="textPersonName"
        android:textColor="@color/textonormal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pt_infonegtelefonos" />

    <EditText
        android:id="@+id/pt_infonegpweb"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:background="@color/fondocajas"
        android:ems="10"
        android:hint="Informacion del Negocio - pagina web"
        android:inputType="textPersonName"
        android:textColor="@color/textonormal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pt_infonegcorreo" />

    <TextView
        android:id="@+id/tv_ancabezado1"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="1dp"
        android:forceHasOverlappingRendering="true"
        android:freezesText="false"
        android:gravity="center"
        android:text="@string/tv_p_encabezado1"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pt_infonegpweb" />

    <TextView
        android:id="@+id/tv_ancabezado2"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="1dp"
        android:forceHasOverlappingRendering="true"
        android:freezesText="false"
        android:gravity="center"
        android:text="@string/tv_p_encabezado2"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ancabezado1" />

    <TextView
        android:id="@+id/tv_ancabezado3"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="1dp"
        android:forceHasOverlappingRendering="true"
        android:freezesText="false"
        android:gravity="center"
        android:text="@string/tv_p_encabezado3"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ancabezado2" />
</android.support.constraint.ConstraintLayout>